[project]
name = "neattesting_kafal"
version = "0.0.6"
authors = [
  { name="Bimal Poudel" },
]
description = "A quick testing engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anytizer/neattesting.py"
Issues = "https://github.com/anytizer/neattesting.py/issues"